feat(jobs,perf): strict 2026 Java fresher matching, N+1 query elimination & latency telemetry